2011-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Create libhex.a and libhexND.a to reduce
	compile-time by 33%. Can be further improved by compiling
	$(top_srcdir)/src/dlvhex/lib{X,Y,Z}.a.

	* README: Small fixes.

	* src/dlvhex/Makefile.am (dlvhex_LDADD): Move @LIBCURL@ to the
	end of the list, linux i386 linker is sensitive to this.

	* configure.ac: Fix messages.

	* examples/tests/query_hex_ground1ca.stdout: Remove whitespace in
	wc output. (ticket #46)

2010-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Collecting the largest bottom and turned off some log-printings.

2010-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/MLPSolver.hpp: Minimize branching in the beginning.

2010-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Finishing Instantiation splitting.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

2010-06-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Implementing instantiation splitting: using Top data structure.

	* include/dlvhex/MLPSolver.hpp: Implement collecting the largest bottom.

2011-05-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Check for g++ >= 4.3.

2011-XX-XX  Peter Schueller  <ps@kr.tuwien.ac.at>

	Most important changes (i.e., the reason for the new version):

	* TODO details [rewrote model building according to LPNMR2011 paper: new dependency notion, evalgraph, evaluation heuristics, ...]
	* evaluation heuristics selectable with --heuristics=...
	* query support (ground and nonground queries, support for displaying all witnesses, incremental cautious nonground querying, external atoms currently not possible in queries)

	Plugin API changes:

	* Plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use
	a "deleter" compiled into the respective plugin (see PluginInterface.h)